# bluerose

./: Cargo.toml  README.md  com.fyralabs.Bluerose.conf  progress-v0.schema.json
src/: bootc.rs  main.rs
src/testdata/: checkupdate.out
src/types/: host.rs  mod.rs  progress.rs
